test/translator/success/imports.prez
import "file.prez"
import "imports/file.prez"
import "imports/folder/subfolder/file.prez"
import "imports/folder2/subfolder/file.prez"
import "imports/other_file.prez"

int func() {
  return 6;
}

int add(int a, int b) {
  return a + b;
}

void main() {
  print(file::func());
  print(imports::file::func());
  print(other_file::otherFunc());
  print(file::func(4));
  print(imports::file::func(4));
  print(func());
  print(folder::subfolder::file::func());

  other_file::Rectangle r1 = imports::other_file::Rectangle(1, 3);
  print(r1.perimeter());

  imports::file::Rectangle r2 = imports::file::Rectangle(3, 3);
  print(r2.area());

  print(scale(r1, 2).perimeter());
}


other_file::Rectangle scale(other_file::Rectangle rect, long scaleFactor) {
  return other_file::Rectangle(rect.length * scaleFactor, rect.width * scaleFactor);
}
