test/translator/error/imports/other_file.prez
int otherFunc() {
  return 3;
}

class Rectangle {
  public long length;
  public long width;

  public Rectangle(long len, long wid) {
    this.length = len;
    this.width = wid;
  }

  public long perimeter() {
    return this.length * 2 + this.width * 2;
  }
}
